# cyclistsocialforce

./: .gitignore  README.md  pyproject.toml
demo/: demoCSFstandalone.py  demoCSFxSUMO-large.py  demoCSFxSUMO.py
scenarios/: curve-scenario.py  parcours-scenario.py
src/cyclistsocialforce/: __init__.py  calibration.py  config.py  controlbehavior.py  dynamics.py  external.py  intersection.py  parameters.py  scenario.py  test.py  trajectory.py  utils.py  vehicle.py  vehiclecontrol.py  vizualisation.py
tests/: test_balancingrider_polemodels.py
