[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cyclistsocialforce"
description = "Microscopic simulation of cyclist interactions on intersections with compatibility to Eclipse SUMO"
readme = "README.md"
version = "2.1.1"
license = {file = "LICENSE"}
authors = [
	{name = "Christoph M. Konrad", email = "c.m.konrad@tudelft.nl"}
]
requires-python = ">3.11"
dependencies = [
	"numpy >= 1.25",
	"matplotlib >= 3.7",
	"scipy >= 1.10",
	"traci",
	"control",
	"pyqt5",
	"opencv-python",
	"bicycleparameters",
	"datetime",
	"sympy",
	"pandas", 
	"scikit-learn"
]

[project.optional-dependencies]
sumo-gui = [
    "sumolib",
	"traci"
]
sumo-cli = [
	"sumolib",
	"libsumo"
]
	
[tool.setuptools.packages.find]
where = ["src"]  
